# app/Http/Controllers/Api/ApiAuthController.php
@@ -21,7 +21,7 @@ class ApiAuthController extends Controller
      /**
      * Register
      * @OA\Post (
-     *     path="/api/register",
+     *     path="/api/v1/register",
      *     tags={"Auth"},
      *     @OA\RequestBody(
      *         @OA\MediaType(
@@ -128,8 +128,42 @@ class ApiAuthController extends Controller
     /**
      * Authenticate a user and return a token.
      *
-     * @param Request $request
-     * @return \Illuminate\Http\JsonResponse
+     * @OA\Post(
+     *      path="/api/v1/login",
+     *      tags={"Auth"},
+     *      @OA\RequestBody(
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  @OA\Property(
+     *                      property="email",
+     *                      type="string",
+     *                      example="john@test.com"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="password",
+     *                      type="string",
+     *                      example="johnjohn1"
+     *                  )
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="meta", type="object",
+     *                  @OA\Property(property="code", type="number", example=200),
+     *                  @OA\Property(property="status", type="string", example="success"),
+     *                  @OA\Property(property="message", type="string", example=null),
+     *              ),
+     *              @OA\Property(property="data", type="object",
+     *                  @OA\Property(property="access_token", type="string", example="1|f16n345m0G0hI0j406342L6ZhQxTKgG"),
+     *                  @OA\Property(property="token_type", type="string", example="Bearer"),
+     *              ),
+     *          )
+     *      )
+     * )
      */
     public function login(Request $request)
     {
@@ -156,8 +190,22 @@ class ApiAuthController extends Controller
     /**
      * Revoke the token of the authenticated user.
      *
-     * @param Request $request
-     * @return \Illuminate\Http\JsonResponse
+     * @OA\Post(
+     *      path="/api/v1/logout",
+     *      tags={"Auth"},
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="meta", type="object",
+     *                  @OA\Property(property="code", type="number", example=200),
+     *                  @OA\Property(property="status", type="string", example="success"),
+     *                  @OA\Property(property="message", type="string", example="You have successfully logged out and the token was successfully deleted"),
+     *              ),
+     *              @OA\Property(property="data", type="object", example={}),
+     *          )
+     *      )
+     * )
      */
     public function logout(Request $request)
     {
